fixed duration, no images for the cards, cards still stuck in the middle.

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -14,24 +14,23 @@ code {
 
 
 
-.card {
-  align-items: baseline;
+/* .card {
   justify-content: center;
   text-align: center;
   border: grey solid 1px;
   padding: 1rem;
   width: 15rem;
   height: 3rem;
-  display: inline-grid;
+  display:inline-table;
   margin: 1rem 1rem;
   box-shadow: 3px 4px #e04b52
-}
+} */
 
 nav {
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
+  /* flex-direction: row; */
+  /* align-items: center; */
+  /* justify-content: center; */
 }
 
 .mr-10 {
@@ -162,8 +161,8 @@ nav {
 .header-top__navigation {
   display: flex;
   flex: 1;
-  flex-direction: row;
-  justify-content: flex-end;
+  /* flex-direction: row; */
+  /* justify-content: flex-end; */
   margin-right: 55px;
 }
 
@@ -229,6 +228,7 @@ nav {
 
 .card {
   text-align: center;
+  align-items: center;
   border: grey solid 1px;
   padding: 1rem;
   width: 15rem;
